assets/css/styles.css
/* General Stylings */
body {
    box-sizing: border-box;
    margin: 0;

    color: white;
    background-color: rgb(26, 24, 24);

    /*Industrial Font Stack*/
    font-family: Bahnschrift, 'DIN Alternate', 'Franklin Gothic Medium', 'Nimbus Sans Narrow', sans-serif-condensed, sans-serif;
    font-weight: normal;
}

.banner {
    border-top: 0.2rem solid hsl(56, 100%, 49%);
    border-bottom: 0.2rem solid hsl(56, 100%, 49%);
    padding: 0.5rem;
    background: hsla(56, 100%, 49%, 0.418);
}

.container {
    padding-left: 1rem;
    padding-right: 1rem;
}

a {
    text-decoration: none;
}

/* Intro section stylings */
@media screen and (max-width: 550px) {

    .intro {
        padding: 2.5rem 2rem;
        text-align: left;
        margin-bottom: -2em;
        font-size: 0.5em;
    }

    .intro-text {
        width: 14rem;
    }

    .intro-secondary-text {
        font-size: 2.5em;
        line-height: 1.4em;
    }

    #intro-capture {
        font-size: 5em;
        margin-bottom: 0.5em;
    }

}

@media screen and (min-width: 550px) and (max-width: 850px) {

    .intro {
        padding: 2.5rem 2rem;
        text-align: left;
        margin-bottom: -2em;
        font-size: 0.6em;
    }

    .intro-text {
        width: 24rem;
    }

    .intro-secondary-text {
        font-size: 2.75em;
        line-height: 1.4em;
    }

    #intro-capture {
        font-size: 5em;
        margin-bottom: 0.5em;
    }

}

@media screen and (min-width: 850px) {

    .intro {
        padding: 2.5rem 2rem;
        text-align: left;
        margin-bottom: -2em;
    }

    .intro-text {
        width: 50em;
    }

    .intro-secondary-text {
        font-size: 1.5em;
        line-height: 1.4em;
    }

    #intro-capture {
        font-size: 5em;
        margin-bottom: 0.5em;
    }

}

#special-title {
    color: orange;
}

/* Header Stylings */
header {
    height: 4rem;

    display: flex;
    justify-content: center;
    align-items: center;

    background-color: rgb(54, 54, 54);
}

header a {
    font-size: 28px;
    font-weight: 900;

    text-decoration: none;
    color: white;
}

/*Car Card Stylings */

.car-container {
    padding: 2.5rem 2rem;
}

.car-cards {

    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(20rem, 2fr));
    grid-column-gap: 1rem;
    grid-row-gap: 3rem;
}

.car-card-grid-item {
    height: 270px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.car-card {
    width: 300px;
    height: 250px;
    border-radius: 20px;
    /*Not really needed since it is applied on hover, where it is truly needed, but just in case*/

    display: flex;
    flex-direction: column;
    align-items: center;
}

.temp-img {
    width: 300px;
    height: 200px;

    border-radius: 18px 18px 0 0;
    background-color: white;
}

.temp-img img {
    width: inherit;
    height: inherit;
}

.car-name {
    width: 300px;
    border-radius: 0 0 18px 18px;

    display: flex;
    justify-content: center;
    align-items: center;

    color: white;
    background-color: rgb(85, 80, 80);
}

.car-card:hover {
    border: orange 2px solid;
    border-radius: 20px;
}

/* Car Intro Stylings */

.specific-car-container {
    padding: 0 2rem;
}

.car-brand-container {
    text-align: center;
    font-size: 2rem;
    padding-top: 1rem;
}

.intro-info {
    display: flex;
    padding-top: 3rem;
    padding-left: 2rem;
    padding-right: 2rem;
    gap: 50px;
    flex-wrap: wrap;
}

.intro-img-card {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    background-color: lightcoral;
    padding: 5px;
}

.intro-img-card img {
    align-self: center;
    width: 50vw;
    height: auto;
}

.intro-img-attribution {
    font-size: 1.25rem;
    align-self: center
}

.car-description-container {
    border-radius: 0.4rem;
    background-color: hsla(0, 0%, 63%, 0.5);
    padding: 1rem;
}

.description-header-container {
    border-bottom: 4px solid white;
    margin-bottom: 1.5rem;
}

.car-description-container h1 {
    margin: 0px;
}

/* Footer Stylings */
footer {
    display: flex;
    gap: 6rem;
    background-color: lightgrey;
    padding: 2rem;
    margin-top: 2rem;
}

.resources p {
    color: black;
    font-weight: 900;
    font-size: 1.1rem;
}

.resources ul {
    margin: 0;
    padding: 0;
}

.resources li {
    list-style-type: none;
}

.resources a {
    font-size: 0.9rem;
    color: hsla(0, 1%, 23%);
}

.resources a:hover {
    color: black;
}

